[project]
name = "pyconjp2025"
version = "0.1.0"
description = "Demo code for the PyConJP 2025 talk: 'Beyond Multiprocessing: A Real-World ML Workload Speedup with Python 3.13+ Free-Threading'"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]
